fix: set index and follow as false

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -7,4 +7,5 @@ body {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    font-family: ui-sans-serif, -apple-system, system-ui, Segoe UI, Helvetica, Apple Color Emoji, Arial, sans-serif, Segoe UI Emoji, Segoe UI Symbol;
 }
