fix: bump to v5 and fix tool invocations

--- a/packages/app/src/components/Messages/Messages.module.css
+++ b/packages/app/src/components/Messages/Messages.module.css
@@ -19,6 +19,8 @@
 
 .bottomButton {
     position: fixed;
-    bottom: 15vh;
+    display: flex;
+    justify-content: center;
+    bottom: 20%;
     left: 50%;
 }
